--- a/cvjo.css
+++ b/cvjo.css
@@ -1,21 +1,54 @@
 * {
   font-family: Arial;
-  padding: 0;
-  margin: 0;
+  padding: 5px;
+  margin: 10px;
   text-align: start;
   box-sizing: border-box;
   color: black;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  background-color: navajowhite;
+  
 }
-* li {
-  justify-content: space-around;
-  text-align: center;
+
+header p {
+  font-size: x-large;
+  font-style: italic;
+}
+
+
+nav {
+	padding: 0; margin: 0;
+}
+nav li {
+	display: inline;
+	list-style: none; 
+}
+
+nav a {
+	display:inline-flex;
+	margin: 100px;
+  font-size: 30px;
+  text-decoration: none;
+  color: blueviolet;
 }
 
 h1 {
-  border: 2px;
-  color: blue;
-  font-family: fantasy;
-  text-align: center;
-  font-size: xx-large;
-}/*# sourceMappingURL=cvjo.css.map */
+  color: blueviolet;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: x-large;
+  font-size: 60px;
+
+}
+
+section {
+ text-align: center;
+ border: solid blueviolet;
+flex-direction:row
+}
+
+p {
+  flex-direction: row;
+  justify-content: flex-start;
+  text-align: left;
+  flex-wrap: wrap;
+}
